fix overflow

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -107,7 +107,6 @@ nav a.current {
 }
 
 main {
-	overflow: auto;
 	width: 100%;
 	margin: 10px 0;
 }
